--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <div class="container">
   <h1>🎭 El Impostor Online</h1>
 
-  <!-- Menú inicial -->
   <div id="menu">
     <input type="text" id="playerName" placeholder="Tu nombre">
     <button id="createRoom">Crear sala</button>
@@ -18,7 +17,6 @@
     <button id="joinRoom">Unirse</button>
   </div>
 
-  <!-- Lobby -->
   <div id="lobby" class="hidden">
     <h2>Sala: <span id="roomCode"></span></h2>
     <h3>Jugadores:</h3>
@@ -27,20 +25,17 @@
     <p id="waitingText">Esperando al host...</p>
   </div>
 
-  <!-- Juego -->
   <div id="game" class="hidden">
     <h2 id="playerRole"></h2>
     <p id="wordInfo"></p>
     <button id="goToVote">Ir a votación</button>
   </div>
 
-  <!-- Votación -->
   <div id="vote" class="hidden">
     <h2>Votación</h2>
     <div id="voteButtons"></div>
   </div>
 
-  <!-- Resultado -->
   <div id="result" class="hidden">
     <h2>Resultado</h2>
     <p id="resultText"></p>
@@ -48,9 +43,10 @@
   </div>
 </div>
 
-<!-- Firebase global -->
-<script src="https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/12.5.0/firebase-database.js"></script>
+<!-- Firebase compat (global, sin módulos) -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
+
