--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>El Impostor Online</title>
+<title>🎭 El Impostor Online</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,23 +12,23 @@
 
   <div id="menu">
     <input type="text" id="playerName" placeholder="Tu nombre">
-    <button id="createRoom">Crear sala</button>
+    <button id="createRoom" class="btn-primary">Crear sala</button>
     <input type="text" id="roomCodeInput" placeholder="Código de sala">
-    <button id="joinRoom">Unirse</button>
+    <button id="joinRoom" class="btn-secondary">Unirse</button>
   </div>
 
   <div id="lobby" class="hidden">
     <h2>Sala: <span id="roomCode"></span></h2>
     <h3>Jugadores:</h3>
     <ul id="playerList"></ul>
-    <button id="startGame" class="hidden">Iniciar partida</button>
+    <button id="startGame" class="btn-primary hidden">Iniciar partida</button>
     <p id="waitingText">Esperando al host...</p>
   </div>
 
   <div id="game" class="hidden">
     <h2 id="playerRole"></h2>
     <p id="wordInfo"></p>
-    <button id="goToVote">Ir a votación</button>
+    <button id="goToVote" class="btn-primary">Ir a votación</button>
   </div>
 
   <div id="vote" class="hidden">
@@ -39,14 +39,13 @@
   <div id="result" class="hidden">
     <h2>Resultado</h2>
     <p id="resultText"></p>
-    <button onclick="location.reload()">Jugar de nuevo</button>
+    <button class="btn-secondary" onclick="location.reload()">Jugar de nuevo</button>
   </div>
 </div>
 
-<!-- Firebase compat (global, sin módulos) -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-<script src="script.js"></script>
+
+<script src="script.js" defer></script>
 </body>
 </html>
-
