--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
   </div>
 
   <div id="game" class="hidden">
+    <p id="roundSummary"></p> 
+    
     <h2 id="playerRole"></h2>
     <p id="wordInfo"></p>
     <button id="goToVote" class="btn-primary">Ir a votación</button>
@@ -34,6 +36,13 @@
   <div id="vote" class="hidden">
     <h2>Votación</h2>
     <div id="voteButtons"></div>
+  </div>
+
+  <div id="eliminated" class="hidden">
+    <h2>Has sido eliminado</h2>
+    <p>Eres un fantasma 👻. Espera a que termine la partida.</p>
+    <h3>Jugadores restantes:</h3>
+    <ul id="remainingPlayersList"></ul>
   </div>
 
   <div id="result" class="hidden">
@@ -45,7 +54,6 @@
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-
 <script src="script.js" defer></script>
 </body>
 </html>
