--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 
   <div id="game" class="hidden">
     <p id="roundSummary"></p> 
-    
     <h2 id="playerRole"></h2>
     <p id="wordInfo"></p>
     <button id="goToVote" class="btn-primary">Ir a votación</button>
@@ -35,6 +34,9 @@
 
   <div id="vote" class="hidden">
     <h2>Votación</h2>
+    
+    <div id="voteStatus"></div>
+
     <div id="voteButtons"></div>
   </div>
 
